# kinect-telepresence-capture

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
apps/: CMakeLists.txt
apps/daemon/: CMakeLists.txt  Config.hpp  Main.cpp
cmake/: Findk4a.cmake  Findk4abt.cmake  _aux.cmake
libs/: CMakeLists.txt
libs/camera/: CMakeLists.txt  Kinect.cpp  Kinect.hpp  Playback.hpp
libs/network/: CMakeLists.txt  Listener.cpp  Listener.hpp  Packet.cpp  Packet.hpp  Socket.hpp
tests/: CMakeLists.txt  test_asio_compilation.cpp  test_camera_kinect.cpp  test_network_packet.cpp  test_network_socket.cpp  test_nlohmann_json.cpp
